manifest/prom-tail.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: promtail
  namespace: utilities
  labels:
    app: promtail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: promtail
  template:
    metadata:
      labels:
        app: promtail
    spec:
      containers:
        - name: promtail
          image: grafana/promtail:2.8.2
          args:
            - "-config.file=/etc/promtail/promtail-config.yaml"
          volumeMounts:
            - name: promtail-config
              mountPath: /etc/promtail/
              readOnly: true
            - name: var-log
              mountPath: /var/log/kubernetes
              readOnly: true
            - name: positions
              mountPath: /tmp
      volumes:
        - name: promtail-config
          configMap:
            name: promtail-config
        - name: var-log
          hostPath:
            path: /tmp/kind-logs
            type: DirectoryOrCreate
        - name: positions
          emptyDir: {}
