manifest/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
  namespace: utilities
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx-app
        image: nginx:stable
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-app
  namespace: utilities
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx-app
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: nginx-app-ingress
#   namespace: utilities
#   annotations:
#     nginx.ingress.kubernetes.io/auth-url: "http://nginx.localhost/oauth2/auth"
#     nginx.ingress.kubernetes.io/auth-signin: "http://nginx.localhost/oauth2/start?rd=$escaped_request_uri"
#     nginx.ingress.kubernetes.io/proxy-buffer-size: 512k
# spec:
#   rules:
#     - host: nginx.localhost
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: nginx-app
#                 port:
#                   number: 80
