manifest/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpbin-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

# ---
# apiVersion: networking.istio.io/v1beta1
# kind: VirtualService
# metadata:
#   name: keycloak-vs
#   namespace: keycloak
# spec:
#   hosts:
#     - "keycloak.localhost"
#   gateways:
#     - istio-system/httpbin-gateway
#   http:
#     - match:
#         - uri:
#             prefix: "/"
#       route:
#         - destination:
#             host: keycloak
#             port:
#               number: 80
# # ---
# # apiVersion: gateway.networking.k8s.io/v1
# # kind: HTTPRoute
# # metadata:
# #   name: keyclock-route
# #   namespace: utilities
# # spec:
# #   parentRefs:
# #   - name: httpbin-gateway
# #     namespace: aks-istio-ingress
# #   hostnames: ["keycloak.pratikargade.online"]
# #   rules:
# #   - matches:
# #     - path:
# #         type: PathPrefix
# #         value: /
# #     backendRefs:
# #     - name: keycloak
# #       port: 80
